# facekeep

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  facekeep.yaml  pyproject.toml
.github/workflows/: ci.yml
assets/: .gitignore
docs/: architecture.md  docker.md  fkeep-format.md  nas.md
examples/: basic_usage.py  make_sample.py
facekeep/: __init__.py  __main__.py  app.py  bench.py  cli.py  compare.py  config.py  detector.py  encoders.py  exceptions.py  faithful.py  gui.py  imageio.py  index.py  metrics.py  models.py  report.py  video.py
facekeep/aggressive/: __init__.py  blender.py  compressor.py  format.py  restorer.py
packaging/windows/: FaceKeep.spec  README.md  build.ps1  installer.iss  launcher.py  make_icon.py
tests/: _memprobe.py  _memrunner.py  conftest.py  run_suite.py  test_app.py  test_autotune_default.py  test_autotune_efficiency.py  test_bench.py  test_bg_codec.py  test_bit_depth.py  test_blender.py  test_bounded_memory.py  test_cli_help.py  test_color.py  test_compare.py  test_compose.py  test_content_aware.py  test_core.py  test_corpus.py  test_corpus_aggressive_regression.py  test_corpus_regression.py  test_custom_detector.py  test_detection_cache.py  test_docker.py  test_dry_run.py  test_e2e.py  test_error_handling.py  test_face_codec.py  test_face_detection_protect.py  test_face_enhance.py  test_gain_map.py  test_gain_map_faithful.py  test_gain_map_fkeep.py  test_gain_map_jpeg.py  test_gain_map_params.py  test_gui.py  test_hand_protection.py  test_hdr_aggressive.py  test_hdr_heic.py  test_heic_hint.py  (+35 more)
tests/corpus/: README.md  download.py  manifest.json
